--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@
     </style>
   </head>
   <body>
+    <audio id="myAudio" loop autoplay>
+      <source src="italianmusic.mp3" type="audio/mp3" />
+    </audio>
+
     <h1>The Cultural Contributions of Italians in Toronto</h1>
 
     <p class="animated-text">
@@ -298,7 +302,10 @@
 
     <section id="section1">
       <h2>Introduction</h2>
-      <p>a</p>
+      <p>
+        Toronto, Canada is known worldwide for its diversity in cultures. In
+        Toronto, theres and abundance of
+      </p>
       <div class="video-container">
         <video class="video" autoplay loop muted>
           <source
