--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </style>
   </head>
   <body>
-    <audio id="myAudio" loop autoplay>
+    <audio id="myAudio" loop autoplay volume = "0.3">
       <source src="italianmusic.mp3" type="audio/mp3" />
     </audio>
 
