--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </style>
   </head>
   <body>
-    <audio id="myAudio" loop autoplay volume = "0.3">
+    <audio id="myAudio" loop>
       <source src="italianmusic.mp3" type="audio/mp3" />
     </audio>
 
@@ -283,7 +283,7 @@
 
     <button
       class="interactive-btn"
-      onclick="changeColor(); showTableOfContents()"
+      onclick="changeColor(); showTableOfContents(); playAudio()"
     >
       Get Started
     </button>
@@ -405,6 +405,11 @@
         setTimeout(() => {
           toc.style.display = "none";
         }, 500);
+      }
+
+      function playAudio() {
+        const audio = document.getElementById("myAudio");
+        audio.play();
       }
     </script>
   </body>
