--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
         <li><a href="#section2">Cultural Contributions</a></li>
         <li><a href="#section3">Italian Heritage Sites</a></li>
         <li><a href="#section4">Conclusion</a></li>
+        <li><a href="#section5">About the Music</a></li>
       </ul>
     </div>
 
