--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </style>
   </head>
   <body>
-    <audio id="myAudio" loop autoplay volume=""0.2">
+    <audio id="myAudio" loop autoplay volume="0.2">
       <source src="italianmusic.mp3" type="audio/mp3" />
     </audio>
 
