--- a/index.html
+++ b/index.html
@@ -360,6 +360,21 @@
         </div>
       </div>
     </section>
+
+    <section id="section5">
+      <h2>About the Music</h2>
+      <p>b</p>
+      <div class="sections-container">
+        <img
+          class="sections-image"
+          src="https://images.pexels.com/photos/31252109/pexels-photo-31252109/free-photo-of-historic-tram-street-scene-in-porta-ticinese-milan.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+        />
+        <div class="image-overlay">
+          <span>Milano, Lombardy</span>
+        </div>
+      </div>
+    </section>
+
     <script>
       function launchConfetti() {
         const box = document.querySelector(".box");
