--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         position: fixed;
         top: 500px;
         left: 10px;
-        background-color: rgba(51, 6, 3, 0.8);
+        background-color: rgba(82, 11, 6, 0.8);
         padding: 10px;
         border-radius: 7px;
         display: none;
@@ -363,14 +363,20 @@
 
     <section id="section5">
       <h2>About the Music</h2>
-      <p>b</p>
+      <p>
+        In 1783, Boccherini composed a Christmas Pastorale for a Villancico, a
+        typically Spanish genre. He was Italian, but lived in Spain and
+        integrated the music of his host country in a remarkable way. Shortly
+        before his death in 1801, he revived this music in a string quintet that
+        has never been recorded
+      </p>
       <div class="sections-container">
         <img
           class="sections-image"
-          src="https://images.pexels.com/photos/31252109/pexels-photo-31252109/free-photo-of-historic-tram-street-scene-in-porta-ticinese-milan.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          src="https://cdn.britannica.com/25/237725-050-FAB638D6/Italian-composer-Luigi-Boccherini.jpg?w=300"
         />
         <div class="image-overlay">
-          <span>Milano, Lombardy</span>
+          <span>Luigi Boccherini</span>
         </div>
       </div>
     </section>
