--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </style>
   </head>
   <body>
-    <audio id="myAudio" loop autoplay volume="0.7">
+    <audio id="myAudio" loop volume="0.3">
       <source src="italianmusic.mp3" type="audio/mp3" />
     </audio>
 
@@ -429,10 +429,10 @@
         }, 500);
       }
 
-      window.onload = function () {
+      function playAudio() {
         const audio = document.getElementById("myAudio");
         audio.play();
-      };
+      }
     </script>
   </body>
 </html>
