--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
         transition: opacity 0.3s ease-in-out;
       }
 
+      .section5-image {
+        width: 60%;
+        height: auto;
+        border-radius: 20px;
+        transition: opacity 0.3s ease-in-out;
+      }
+
+      .section5-container {
+        position: relative;
+        width: 60%;
+        margin: 0 auto;
+      }
+
       .sections-container:hover .sections-image {
         opacity: 0.7; /* The image will become slightly transparent when hovered */
       }
@@ -370,10 +383,10 @@
         before his death in 1801, he revived this music in a string quintet that
         has never been recorded
       </p>
-      <div class="sections-container">
+      <div class="section5-container">
         <img
-          class="sections-image"
-          src="https://cdn.britannica.com/25/237725-050-FAB638D6/Italian-composer-Luigi-Boccherini.jpg?w=150"
+          class="section5-image"
+          src="https://cdn.britannica.com/25/237725-050-FAB638D6/Italian-composer-Luigi-Boccherini.jpg?w=100"
         />
         <div class="image-overlay">
           <span>Luigi Boccherini</span>
