--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
 
       function playAudio() {
         const audio = document.getElementById("myAudio");
+        audio.volume = 0.3;
         audio.play();
       }
     </script>
