--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       }
 
       .section5-image {
-        width: 60%;
+        width: 30%;
         height: auto;
         border-radius: 20px;
         transition: opacity 0.3s ease-in-out;
@@ -159,11 +159,12 @@
 
       .section5-container {
         position: relative;
-        width: 60%;
+        width: 30%;
         margin: 0 auto;
       }
 
-      .sections-container:hover .sections-image {
+      .sections-container:hover .sections-image,
+      .section5-container:hover .section5-image {
         opacity: 0.7; /* The image will become slightly transparent when hovered */
       }
 
