--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       }
 
       .section5-image {
-        width: 30%;
+        width: 45%;
         height: auto;
         border-radius: 20px;
         transition: opacity 0.3s ease-in-out;
@@ -159,7 +159,7 @@
 
       .section5-container {
         position: relative;
-        width: 30%;
+        width: 45%;
         margin: 0 auto;
       }
 
@@ -180,7 +180,8 @@
         transition: opacity 0.3s ease-in-out;
       }
 
-      .sections-container:hover .image-overlay {
+      .sections-container:hover .image-overlay,
+      .section5-container:hover .image-overlay {
         opacity: 1; /* Makes the text appear when the image is hovered */
       }
 
