--- a/index.html
+++ b/index.html
@@ -319,8 +319,26 @@
       <h2>Introduction</h2>
       <p>
         Toronto, Canada is known worldwide for its diversity in cultures. In
-        Toronto, theres and abundance of
+        Toronto, theres and abundance of ethnicites, with Italian immigrants
+        playing a key role in the city'es multicultural identity. Their profound
+        impact has been interwoven in Toronto's fabric of society, with
+        significant strands of their resilience through prejudice, strong
+        community, and economic contributions. Around 5 years after WWII ended,
+        Italian immigration to Canada saw its peak, and Toronto became a hub for
+        sojourners and settlers. The Italian community’s traditional lifestyle
+        led to the formation of Little Italy, whose culture radiated throughout
+        the downtown area with the help of restaurants and businesses,
+        preserving their culture and fortifying its place in the city.
       </p>
+      <div class="sections-container">
+        <img
+          class="sections-image"
+          src="https://live.staticflickr.com/65535/53097249697_1e990f0ba8_b.jpg"
+        />
+        <div class="image-overlay">
+          <span>Fruit Store in Little Italy, Toronto</span>
+        </div>
+      </div>
       <div class="video-container">
         <video class="video" autoplay loop muted>
           <source
@@ -336,7 +354,26 @@
 
     <section id="section2">
       <h2>Cultural Contributions</h2>
-      <p>b</p>
+      <p>
+        Nicholas DeMaria Harney, professor and head of the department of
+        sociology and criminology at the University of Windsor, has extensively
+        studied the evolving identities of Italian Canadians. In his book ‘Eh,
+        Paesan!: Being Italian in Toronto’, particularly an excerpt from the
+        fifth chapter ‘Constructing Italian Regionalisms in Toronto’, Harney
+        writes about the evolving cultural identities of Italian Canadians, a
+        shift from hometown-based affiliations, to figuratively live outside of
+        the borders Italians created between regions. Harney highlights how
+        second-generation Italian immigrants find a connection in a broader
+        group of Italians. Federations like the Confederazione Calabro-Canadese
+        and The Federation of Sicilian Clubs symbolize the change, where new
+        generations are trying to find a balance between their heritage and
+        regional ties, moving beyond their hometowns: <br /><br />With the
+        recent upsurge in regionalism in Toronto, one friend … told me that it
+        is hard to find friends any more who want to be simply Italian Canadian.
+        Many are developing their regional ties: 'There are just too many of us,
+        so I guess each person is trying find something in their past that's
+        more intimate.’ (Harney, Eh, Paesan! 89)<br />
+      </p>
       <div class="sections-container">
         <img
           class="sections-image"
