--- a/index.html
+++ b/index.html
@@ -377,6 +377,15 @@
       <div class="sections-container">
         <img
           class="sections-image"
+          src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1271478289i/8049510.jpg"
+        />
+        <div class="image-overlay">
+          <span>Eh, Paesan!: Being Italian in Toronto</span>
+        </div>
+      </div>
+      <div class="sections-container">
+        <img
+          class="sections-image"
           src="https://images.pexels.com/photos/31321238/pexels-photo-31321238/free-photo-of-street-musician-playing-guitar-outdoors.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
         />
         <div class="image-overlay">
