--- a/index.html
+++ b/index.html
@@ -396,7 +396,25 @@
 
     <section id="section3">
       <h2>Italian Heritage Sites</h2>
-      <p>b</p>
+      <p>
+        Odoardo Di Santo, … indicated some of the intra ethnic competition
+        between Italian regional groups in Toronto …: "Abruzzese Canadians have
+        never been involved in any criminal activity but have quietly, through
+        hard work, helped to pass on heritage to our children and contribute to
+        a vibrant multi-cultural Canada." In the end the creation of Casa
+        Abruzzo would let them do many things: preserve and pass on their
+        heritage, add to the diversity of Ontario … it would be a "dot on the
+        map of Canada for Abbruzzese around the world," as Di Santo told the
+        crowd. (Harney, Building It Italian Regional Identity in Toronto 52)<br /><br />
+        Nicholas provides many examples as to how Italian Canadians left their
+        mark the city of Toronto that allowed them to pass on their heritage for
+        generations and fuel the diversity in the city, including building
+        community centers, social clubs, and homes for the elderly like Casa
+        Abruzzo. This comes from what started out a longing desire of retiring
+        Italians to relive their experiences in their homeland and eventually
+        formed into a movement to erect a bastion as residuum from the Italian
+        diaspora, spread throughout North America.
+      </p>
       <div class="sections-container">
         <img
           class="sections-image"
@@ -410,7 +428,15 @@
 
     <section id="section4">
       <h2>Conclusion</h2>
-      <p>b</p>
+      <p>
+        The contributions of Italian immigrants to Toronto's multicultural
+        identity can't be overstated. Through perseverance, community, and
+        financial responsibility, Italians have aided in shaping downtown
+        Toronto into a diverse hub of cultures and traditions. Through their
+        efforts, they ensured that their history remained integral to Toronto's
+        history. From business, to clubs, and communities, each step allows
+        future immigrants to understand the journey, from boat to bakery.
+      </p>
       <div class="sections-container">
         <img
           class="sections-image"
