--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
         so I guess each person is trying find something in their past that's
         more intimate.’ (Harney, Eh, Paesan! 89)<br />
       </p>
-      <div class="sections-container">
+      <div class="section5-container">
         <img
-          class="sections-image"
+          class="section5-image"
           src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1271478289i/8049510.jpg"
         />
         <div class="image-overlay">
