--- a/index.html
+++ b/index.html
@@ -372,7 +372,22 @@
         is hard to find friends any more who want to be simply Italian Canadian.
         Many are developing their regional ties: 'There are just too many of us,
         so I guess each person is trying find something in their past that's
-        more intimate.’ (Harney, Eh, Paesan! 89)<br />
+        more intimate.’ (Harney, Eh, Paesan! 89)<br /><br /><br />Italian media
+        over time spread to the Italian diasporas and communities outside of the
+        borders of Italy through television shows and magazine that fostered a
+        sense of shared identity, which helped blur the lines between distinct
+        groups of Italians, allowing them to come together to form a larger
+        community. This translated to more community and social clubs over time,
+        with a decrease in an Italian Canadian’s connections to other paesani,
+        highlighting the progressivity of the Italian Canadian, and their fine
+        intertwining throughout the tapestry of cultures in Toronto. Nicholas is
+        a reliable source of information on the growth of an Italian immigrant
+        to an Italian Canadian, which precedes the cultural and historical
+        amalgamation of Italians and other groups in Toronto. It is important to
+        cover every part of the process that Italian Canadians underwent in
+        becoming what they are today, which includes the slow blurring of the
+        dividing lines of different Italian subgroups, alongside the acceptance
+        and advocacy of Italian culture and heritage by other Canadians.
       </p>
       <div class="section5-container">
         <img
