--- a/index.html
+++ b/index.html
@@ -483,6 +483,28 @@
       </div>
     </section>
 
+    <section id="section6">
+      <h2>Sources</h2>
+      <p>
+        Sources:<br>
+        Research Paper:<br>
+        Parissi, Lucy. “Italian Interview - Lucy Parissi - ITA-5735-PAR-A.” SFU Digitized
+Collections, MHSO, 27 Apr. 1983. <br>
+Harney, Nicholas. “Building Italian regional identity in Toronto: Using space to make
+culture material.” Anthropologica, vol. 44, no. 1, 2002, p. 43, <br>
+Iacovetta, Franca. Such Hardworking People Italian Immigrants in Postwar Toronto.
+McGill-Queen’s University Press, 2008.<br>
+Harney, Nicholas De Maria. Eh, Paesan!: Being Italian in Toronto (Being Italian in
+Toronto). University of Toronto Press, 1998. <br><br>
+        Website:<br>
+        Harney, Nicholas. “Building Italian regional identity in Toronto: Using space to make
+culture material.” Anthropologica, vol. 44, no. 1, 2002, p. 43, <br>
+Iacovetta, Franca. Such Hardworking People Italian Immigrants in Postwar Toronto.
+McGill-Queen’s University Press, 2008.<br>
+      </p>
+      </div>
+    </section>
+
     <script>
       function launchConfetti() {
         const box = document.querySelector(".box");
