--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
         <li><a href="#section3">Italian Heritage Sites</a></li>
         <li><a href="#section4">Conclusion</a></li>
         <li><a href="#section5">About the Music</a></li>
+        <li><a href="#section6">Sources</a></li>
       </ul>
     </div>
 
