--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     <section id="section6">
       <h2>Sources</h2>
       <p>
-        Sources:<br>
+        Sources:<br><br>
         Research Paper:<br>
         Parissi, Lucy. “Italian Interview - Lucy Parissi - ITA-5735-PAR-A.” SFU Digitized
 Collections, MHSO, 27 Apr. 1983. <br>
