--- a/index.html
+++ b/index.html
@@ -320,13 +320,13 @@
       <h2>Introduction</h2>
       <p>
         Toronto, Canada is known worldwide for its diversity in cultures. In
-        Toronto, theres and abundance of ethnicites, with Italian immigrants
+        Toronto, theres an abundance of ethnicites, with Italian immigrants
         playing a key role in the city'es multicultural identity. Their profound
         impact has been interwoven in Toronto's fabric of society, with
         significant strands of their resilience through prejudice, strong
         community, and economic contributions. Around 5 years after WWII ended,
-        Italian immigration to Canada saw its peak, and Toronto became a hub for
-        sojourners and settlers. The Italian community’s traditional lifestyle
+        Italian immigration to Canada saw its peak due to the instability of their home country, and Toronto became a hub for
+        sojourners and settlers(temporary workers and permanent immigrants) due to its growing industrial sector and potential for a better life. The Italian community’s traditional lifestyle
         led to the formation of Little Italy, whose culture radiated throughout
         the downtown area with the help of restaurants and businesses,
         preserving their culture and fortifying its place in the city.
@@ -356,7 +356,7 @@
     <section id="section2">
       <h2>Cultural Contributions</h2>
       <p>
-        Nicholas DeMaria Harney, professor and head of the department of
+        In Little Italy on College Street, there are bakeries and pizzerias that have been maintained for generations. There are also many festivals celebrated in Little Italy, the most poplar being The Taste of Little Italy Festival. Besides the traditions that are being preserved, researchers enjoy analyzing the history of Italian cutlure as well. Nicholas DeMaria Harney, professor and head of the department of
         sociology and criminology at the University of Windsor, has extensively
         studied the evolving identities of Italian Canadians. In his book ‘Eh,
         Paesan!: Being Italian in Toronto’, particularly an excerpt from the
@@ -445,12 +445,10 @@
     <section id="section4">
       <h2>Conclusion</h2>
       <p>
-        The contributions of Italian immigrants to Toronto's multicultural
-        identity can't be overstated. Through perseverance, community, and
+        The contributions of Italian immigrants have left an undeniable mark on Toronto's history. Through perseverance, community, and
         financial responsibility, Italians have aided in shaping downtown
-        Toronto into a diverse hub of cultures and traditions. Through their
-        efforts, they ensured that their history remained integral to Toronto's
-        history. From business, to clubs, and communities, each step allows
+        Toronto into a diverse hub of cultures and traditions. As a product of their
+        efforts, they ensured that their legacy remained integral to Toronto's history. From business, to clubs, and communities, each step allows
         future immigrants to understand the journey, from boat to bakery.
       </p>
       <div class="sections-container">
