--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <p>
         Toronto, Canada is known worldwide for its diversity in cultures. In
         Toronto, theres an abundance of ethnicites, with Italian immigrants
-        playing a key role in the city'es multicultural identity. Their profound
+        playing a key role in the city's multicultural identity. Their profound
         impact has been interwoven in Toronto's fabric of society, with
         significant strands of their resilience through prejudice, strong
         community, and economic contributions. Around 5 years after WWII ended,
